# pallet-oracle-example

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  mock.rs  tests.rs
